# plotseamap

./: .gitignore  README.md  best_model.pt  datenanalyze.ipynb  gmm.ipynb  init_subfolders.sh  multi_polygone_typen.ipynb  pyproject.toml  pyvenv.cfg  test10.ipynb  test2.ipynb  vergleich.ipynb
config/: ais_filters.json  anomaly_sendefrequenz.json  fehmarnbelt.json  fehmarnbelt_alt.json  ships_classify.json  trajectory.json
models/: best_model.pt
processed/clipped_osm/: cut_fehmarnbelt.osm.pbf
processed/geojson/: fehmarnbelt_buffer.geojson
processed/poly/: fehmarnbelt.poly
scripts/: convert_osm_to_gpkg.sh  convert_to_gpkg.sh  convert_to_poly.py  create_buffer.py  extract_clip.sh  merge_fix_osm.sh  plot_map.py  plot_map_alt copy.py  plott.py  workflow.py
scripts/utils/: geo_helpers.py
src/ais/: cli.py  loader.py  merge.py  plot.py  plot_single_route.py
src/anomaly_detection/: run_anomaly.py
src/anomaly_detection/ships_classify/: preprocess.py  sequences.py  train.py
src/anomaly_detection/trajectory/: load_and_filter.py
src/bearing/: README_bearing.md  build_lut.py  build_range_lut.py  compute_distance.py  compute_sector_stats.py  interpolate_timeseries.py  lookup_bcr.py  lookup_range.py  math.md  pipeline.py  plot_range_heatmap.py  plot_tracks.py  test.ipynb
src/plotseamap/: README.md  README_plotseamap.md  buffer.py  cli.py  clip_bbox.py  convert.py  extract.py  merge.py  plot copy.py  plot.py  plot_ALT.py
src/plotseamap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test_integration.py
(+14 files in other folders)
